--- a/todo-app/src/App.css
+++ b/todo-app/src/App.css
@@ -1,38 +1,28 @@
 .App {
+  font-family: sans-serif;
   text-align: center;
+  background-color: aqua;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.cont {
+  width: 250px;
+  height: 250px;
+  margin-top: 50px;
+  margin-left: 150px;
+  background-color: violet;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.button {
+  border-radius: 8px;
+  font-size: 20px;
+  background-color: red;
   color: white;
+  margin-left: 70px;
+  margin-top: 100px;
+}
+.cont2 {
+  width: 250px;
+  height: 250px;
+  margin-top: 50px;
+  margin-left: 150px;
+  background-color: yellow;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
